rust/mlt-ffi/generated-c/MltEncoderConfig.h

void MltEncoderConfig_set_allow_shared_dict(MltEncoderConfig* self, bool value);
void MltEncoderConfig_destroy(MltEncoderConfig* self);