rust/mlt-ffi/generated-c/MltEncodedBuffer.h

DiplomatU8View MltEncodedBuffer_as_bytes(const MltEncodedBuffer* self);
size_t MltEncodedBuffer_len(const MltEncodedBuffer* self);
bool MltEncodedBuffer_is_empty(const MltEncodedBuffer* self);
void MltEncodedBuffer_destroy(MltEncodedBuffer* self);