rust/mlt-java/src/main/java/org/maplibre/mlt/encoder/ffi/mlt_ffi_h.java


  /**
   * {@snippet lang=c :
   * void MltEncoderConfig_set_allow_shared_dict(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static void MltEncoderConfig_set_allow_shared_dict(MemorySegment self, boolean value) {
    var mh$ = MltEncoderConfig_set_allow_shared_dict.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltEncoderConfig_set_allow_shared_dict", self, value);
      }
      mh$.invokeExact(self, value);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltEncoderConfig_destroy {
    public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(mlt_ffi_h.C_POINTER);

    public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("MltEncoderConfig_destroy");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * void MltEncoderConfig_destroy(MltEncoderConfig *self)
   * }
   */
  public static FunctionDescriptor MltEncoderConfig_destroy$descriptor() {
    return MltEncoderConfig_destroy.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * void MltEncoderConfig_destroy(MltEncoderConfig *self)
   * }
   */
  public static MethodHandle MltEncoderConfig_destroy$handle() {
    return MltEncoderConfig_destroy.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * void MltEncoderConfig_destroy(MltEncoderConfig *self)
   * }
   */
  public static MemorySegment MltEncoderConfig_destroy$address() {
    return MltEncoderConfig_destroy.ADDR;
  }

  /**
   * {@snippet lang=c :
   * void MltEncoderConfig_destroy(MltEncoderConfig *self)
   * }
   */
  public static void MltEncoderConfig_destroy(MemorySegment self) {
    var mh$ = MltEncoderConfig_destroy.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltEncoderConfig_destroy", self);
      }
      mh$.invokeExact(self);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltEncodedBuffer_as_bytes {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.of(DiplomatU8View.layout(), mlt_ffi_h.C_POINTER);

    public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("MltEncodedBuffer_as_bytes");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * DiplomatU8View MltEncodedBuffer_as_bytes(const MltEncodedBuffer *self)
   * }
   */
  public static FunctionDescriptor MltEncodedBuffer_as_bytes$descriptor() {
    return MltEncodedBuffer_as_bytes.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * DiplomatU8View MltEncodedBuffer_as_bytes(const MltEncodedBuffer *self)
   * }
   */
  public static MethodHandle MltEncodedBuffer_as_bytes$handle() {
    return MltEncodedBuffer_as_bytes.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * DiplomatU8View MltEncodedBuffer_as_bytes(const MltEncodedBuffer *self)
   * }
   */
  public static MemorySegment MltEncodedBuffer_as_bytes$address() {
    return MltEncodedBuffer_as_bytes.ADDR;
  }

  /**
   * {@snippet lang=c :
   * DiplomatU8View MltEncodedBuffer_as_bytes(const MltEncodedBuffer *self)
   * }
   */
  public static MemorySegment MltEncodedBuffer_as_bytes(
      SegmentAllocator allocator, MemorySegment self) {
    var mh$ = MltEncodedBuffer_as_bytes.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltEncodedBuffer_as_bytes", allocator, self);
      }
      return (MemorySegment) mh$.invokeExact(allocator, self);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltEncodedBuffer_len {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.of(mlt_ffi_h.C_LONG, mlt_ffi_h.C_POINTER);

    public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("MltEncodedBuffer_len");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * size_t MltEncodedBuffer_len(const MltEncodedBuffer *self)
   * }
   */
  public static FunctionDescriptor MltEncodedBuffer_len$descriptor() {
    return MltEncodedBuffer_len.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * size_t MltEncodedBuffer_len(const MltEncodedBuffer *self)
   * }
   */
  public static MethodHandle MltEncodedBuffer_len$handle() {
    return MltEncodedBuffer_len.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * size_t MltEncodedBuffer_len(const MltEncodedBuffer *self)
   * }
   */
  public static MemorySegment MltEncodedBuffer_len$address() {
    return MltEncodedBuffer_len.ADDR;
  }

  /**
   * {@snippet lang=c :
   * size_t MltEncodedBuffer_len(const MltEncodedBuffer *self)
   * }
   */
  public static long MltEncodedBuffer_len(MemorySegment self) {
    var mh$ = MltEncodedBuffer_len.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltEncodedBuffer_len", self);
      }
      return (long) mh$.invokeExact(self);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltEncodedBuffer_is_empty {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.of(mlt_ffi_h.C_BOOL, mlt_ffi_h.C_POINTER);

    public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("MltEncodedBuffer_is_empty");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * _Bool MltEncodedBuffer_is_empty(const MltEncodedBuffer *self)
   * }
   */
  public static FunctionDescriptor MltEncodedBuffer_is_empty$descriptor() {
    return MltEncodedBuffer_is_empty.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * _Bool MltEncodedBuffer_is_empty(const MltEncodedBuffer *self)
   * }
   */
  public static MethodHandle MltEncodedBuffer_is_empty$handle() {
    return MltEncodedBuffer_is_empty.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * _Bool MltEncodedBuffer_is_empty(const MltEncodedBuffer *self)
   * }
   */
  public static MemorySegment MltEncodedBuffer_is_empty$address() {
    return MltEncodedBuffer_is_empty.ADDR;
  }

  /**
   * {@snippet lang=c :
   * _Bool MltEncodedBuffer_is_empty(const MltEncodedBuffer *self)
   * }
   */
  public static boolean MltEncodedBuffer_is_empty(MemorySegment self) {
    var mh$ = MltEncodedBuffer_is_empty.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltEncodedBuffer_is_empty", self);
      }
      return (boolean) mh$.invokeExact(self);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltEncodedBuffer_destroy {
    public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(mlt_ffi_h.C_POINTER);

    public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("MltEncodedBuffer_destroy");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * void MltEncodedBuffer_destroy(MltEncodedBuffer *self)
   * }
   */
  public static FunctionDescriptor MltEncodedBuffer_destroy$descriptor() {
    return MltEncodedBuffer_destroy.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * void MltEncodedBuffer_destroy(MltEncodedBuffer *self)
   * }
   */
  public static MethodHandle MltEncodedBuffer_destroy$handle() {
    return MltEncodedBuffer_destroy.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * void MltEncodedBuffer_destroy(MltEncodedBuffer *self)
   * }
   */
  public static MemorySegment MltEncodedBuffer_destroy$address() {
    return MltEncodedBuffer_destroy.ADDR;
  }

  /**
   * {@snippet lang=c :
   * void MltEncodedBuffer_destroy(MltEncodedBuffer *self)
   * }
   */
  public static void MltEncodedBuffer_destroy(MemorySegment self) {
    var mh$ = MltEncodedBuffer_destroy.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltEncodedBuffer_destroy", self);
      }
      mh$.invokeExact(self);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltError_message {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.ofVoid(mlt_ffi_h.C_POINTER, mlt_ffi_h.C_POINTER);

    public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("MltError_message");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * void MltError_message(const MltError *self, DiplomatWrite *write)
   * }
   */
  public static FunctionDescriptor MltError_message$descriptor() {
    return MltError_message.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * void MltError_message(const MltError *self, DiplomatWrite *write)
   * }
   */
  public static MethodHandle MltError_message$handle() {
    return MltError_message.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * void MltError_message(const MltError *self, DiplomatWrite *write)
   * }
   */
  public static MemorySegment MltError_message$address() {
    return MltError_message.ADDR;
  }

  /**
   * {@snippet lang=c :
   * void MltError_message(const MltError *self, DiplomatWrite *write)
   * }
   */
  public static void MltError_message(MemorySegment self, MemorySegment write) {
    var mh$ = MltError_message.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltError_message", self, write);
      }
      mh$.invokeExact(self, write);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltError_destroy {
    public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(mlt_ffi_h.C_POINTER);

    public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("MltError_destroy");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * void MltError_destroy(MltError *self)
   * }
   */
  public static FunctionDescriptor MltError_destroy$descriptor() {
    return MltError_destroy.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * void MltError_destroy(MltError *self)
   * }
   */
  public static MethodHandle MltError_destroy$handle() {
    return MltError_destroy.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * void MltError_destroy(MltError *self)
   * }
   */
  public static MemorySegment MltError_destroy$address() {
    return MltError_destroy.ADDR;
  }

  /**
   * {@snippet lang=c :
   * void MltError_destroy(MltError *self)
   * }
   */
  public static void MltError_destroy(MemorySegment self) {
    var mh$ = MltError_destroy.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltError_destroy", self);
      }
      mh$.invokeExact(self);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }
